# crossreactivity

./: .gitignore  HANDOFF.md  Makefile  README.md  demo-plan.md  demo-run.md  extensions-spec.md  findings.md  mvp-spec.md  pivot-spec.md  plan.md  pyproject.toml  reference-set.md  tools.md
.claude/: settings.json
data/anchor/: README.md  shr1210_vh.fasta  shr1210_vl.fasta
data/anchor/offtargets/: offtargets.csv
data/anchor/variants/: shr1210_L1L3germ.fasta  shr1210_L1germ.fasta  shr1210_L3germ.fasta  shr1210_WT.fasta  shr1210_scrambledCDR.fasta
data/anchor2/: offtarget_PF4_P02776.fasta  provenance.md  vh.fasta  vl.fasta
data/curated/: build_background.py  build_layer_a.py  build_layer_c.py  layer_c_mimicry_seed.csv  merge_reference_set.py  missing_accs.txt  self_proteins_layer_a.csv
data/curated/raw_fasta/: Q14CZ8.fasta
data/curated/raw_surfaceome/: seq_cache.tsv
data/reference/: ectodomains.csv  ectodomains_report.md  self_proteins.csv
data/results/: README.md  benchmark_antigens.json  benchmark_embed_scores.json  benchmark_surface_scores.json  cofold_metrics.csv  tier1_filter_scores.csv
demo/: README.md  dashboard.html  verdict_table.json  verdict_table.md
docs/: demo-run.md  extensions-spec.md  glossary.md  mvp-spec.md  reference-set.md  roadmap.md  tools.md
notebooks/: anchor_validation.ipynb
skills/: anarci_extract.md  antibody_embed.md  antigen_embed.md  boltz_cofold.md  embedding_rank.md  igfold_surface.md
src/crossflag/: pipeline.py
tests/: test_cdr_extract.py  test_cofold_gate.py  test_demo.py  test_panel_rank.py
(+331 files in other folders)
